# cz-mono

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml  ruff.yml  tests.yml
src/cz_mono/: mono_version_scheme.py
tests/: conftest.py  test_version_scheme_mono_versioning.py  test_version_schemes.py
tests/e2e/: test_cli_integration.py
